--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ description: A description about my blog homepage
   <h2>Blog Posts</h2>
   <ul>
     {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> - <a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><span>{{ post.date | date_to_string }}</span> - <a href="{{site.baseurl}}{{post.url}}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
 </div>
@@ -17,7 +17,7 @@ description: A description about my blog homepage
   <ul>
     {% for page in site.html_pages %}
       {% if page.title %}
-        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
+        <li><a href="{{site.baseurl}}{{post.url}}">{{ page.title }}</a></li>
       {% endif %}
     {% endfor %}
   </ul>
