--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ id: home
     <h3>Newest Docs</h3>
     <ul>
       {% for post in site.posts limit:5 %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        <li><a href="{{site.baseurl}}{{ post.url }}">{{ post.title }}</a></li>
       {% endfor %}
     </ul>
   </div><!-- item -->
