--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 description: Tiny Factory Documentation
 id: home
 ---
-<div class="sidebar">
+<div id="sidebar" class="mousescroll">
   <div class="side-logo"><a href="{{site.url}}"><img src="{{site.url}}/images/logo.png" alt=""></a></div>
   <div class="item">
     <h3>Documentation</h3>
